# sniparinject

./: .coveragerc  .gitignore  .pylintrc  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-reports.md  document-improvements.md  feature-request.md  question.md
.github/workflows/: code-ql.yml  python-app.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
script/: dev-setup.bash  pypi-build.bash  pypi-upload.bash  pypitest-upload.bash  qa-coverage.bash  qa-flake8.bash  qa-pylint.bash  qa-pytest.bash  setup-dev.bash  setup.bash
src/: .pylintrc  pyproject.toml  setup.cfg  setup.py
src/sniparinject/: network_sniffer.py
src/sniparinject/core/: game.py  settings.py  text_style.py  utility.py
test/: .coveragerc  __init__.py  pytest.ini  test_game.py  test_network_sniffer.py
tests/: test_game.py  test_network_sniffer.py  test_settings.py  test_utility.py
