[metadata]
name = sniparinject
version = 0.0.0.dev4
author = Israel Roldan
author_email = israel.alberto.rv@gmail.com
description = Intercept and read the network packets to find useful information. Also, inject some data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/airvzxf/snipar-inject-pypi
project_urls =
    Source Code = https://github.com/airvzxf/snipar-inject-pypi
    Bug Tracker = https://github.com/airvzxf/snipar-inject-pypi/issues
license : GPLv3
license_file : LICENSE
platforms : Linux, Unix
keywords = network, networking, packet, packets, sniffer, parser, inject, injection, hack, video games, games
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Games/Entertainment
    Topic :: Security
    Topic :: System :: Networking
    Topic :: System :: Networking :: Monitoring

[options]
packages = find:
install_requires =
    PyYAML>=5.4.1
    scapy>=2.4.5
python_requires = >=3.9

[flake8]
max-line-length = 127
max-complexity = 10
count = true
show-source = true
statistics = true
exclude = venv,build,dist
